# vulkan-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  suppr.txt
shaders/: back-face.frag  back-face.vert  csg-diff-frontface.frag  csg.frag  csg.vert  depth-display.frag  depth.frag  fullscreen-quad.vert  shader.frag  shader.vert  skybox.frag  volume-capture.frag  volume-capture.vert
shaders/misc/: christmas-tree.frag  ocean.frag
shaders/pbr/: pbr.frag  pbr.vert
shaders/skybox/: skybox.frag  skybox.vert
src/: main.cpp
src/core/: asset-manager.cpp  asset-manager.h  engine.cpp  engine.h  engine.hpp  engine.hxx  scene-manager.h  scene-manager.hxx
src/gfx/: back-face-pipeline.cpp  back-face-pipeline.h  csg-pipeline.cpp  csg-pipeline.h  pbr-pipeline.cpp  pbr-pipeline.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  skybox-pipeline.cpp  skybox-pipeline.h  skybox-pipeline.hxx  skybox-renderer.cpp  skybox-renderer.h  skybox-renderer.hxx  volume-capture-pipeline.cpp  volume-capture-pipeline.h
src/misc/: singleton.h
src/render/: deferred-renderer.cpp  deferred-renderer.h  renderer.cpp  renderer.h
src/scene/: camera.h  camera.hxx  cube.cpp  cube.h  fwd.h  instance.cpp  instance.h  instance.hxx  mesh.cpp  mesh.h  mesh.hxx  object.h  scene.cpp  scene.h  scene.hxx  visitor.cpp  visitor.h
src/types/: cframe.cpp  cframe.h  cframe.hxx  matrix4.cpp  matrix4.h  matrix4.hxx  vector2.cpp  vector2.h  vector2.hxx  vector3.cpp  vector3.h  vector3.hxx
